--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphiql": "^0.12.0",
-    "graphql": "^14.0.2"
+    "graphql": "^14.0.2",
+    "mongoose": "^5.4.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
