--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "react-scripts build",
+    "deploy": "npm run build && gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
@@ -16,16 +18,18 @@
   "bugs": {
     "url": "https://github.com/ladegreg/Fotos/issues"
   },
-  "homepage": "https://github.com/ladegreg/Fotos#readme",
+  "homepage": "https://ladegreg.github.io/Fotos/",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
+    "gh-pages": "^2.0.1",
     "graphiql": "^0.12.0",
     "graphql": "^14.0.2",
     "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.4.3"
+    "mongoose": "^5.4.3",
+    "openode": "^1.9.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
