--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "^2.1.3"
   },
   "homepage": "https://ladegreg.github.io/Fotos/",
   "scripts": {
@@ -25,5 +25,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:5000"
 }
