--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "mern-stack-app2",
   "version": "1.0.0",
   "engines": {
-  "node": "10.15.1"
+  "node": "10.15.1",
+  "npm": "5.6.0"
   },
   "description": "[**https://mern-stack-app2.herokuapp.com/**][page]",
   "main": "server.js",
